--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>CGC - Index</title>
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	
 </head>
 
@@ -29,6 +30,13 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="aboutus.html">Sobre Nosotros</a>
+        </li>
+		  <li class="nav-item">
+          <a class="nav-link" href="contactenos.html">Contáctenos</a>
+        </li>
+		
+		  <li class="nav-item">
+          <a class="nav-link" href="SignIn.html">Cuenta</a>
         </li>
         
        
