--- a/contactenos.html
+++ b/contactenos.html
@@ -31,6 +31,9 @@
 		    <li class="nav-item">
           <a class="nav-link" href="SignIn.html">Cuenta</a>
         </li>
+		  <li class="nav-item">
+			  <a class="nav-link" href="SignIn.html"><img src="img/carrito.png" alt="carrito" class="img-fluid" width="40"></a>
+			</li>
         
        
       </ul>
