cambios hechos-aboutus-contactenos-index-signin
adicion de viewport a todas las paginas, agregado el navbar y footer en la pagina de sign in, y cambios al footer de la pagina principal

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link href="css/jquery.fancybox.min.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
 	
-	
+
 </head>
 
 	
@@ -146,17 +146,17 @@
 	</section>
 	
 <footer>
-     <div class="row">
-
-        <div class="col-md-6 footer-logo">
-                <a href="#"><img src="img/Builders1.png" width="45" alt="CGC"></a>
-         </div>
-
-         <div class="col-md-6 footer-credits">
-                <p>©2022 CGC All Rights Reserved</p> 
-         </div>
-     </div>
-</footer>
+	 <div class="logo footer">
+           <div class="logo">
+			   
+            <a href="#"><img src="img/Builders1.png" width="50" alt="CGC"></a>
+			   
+           </div>
+	
+      </div>
+	<p>©2022 CGC All Rights Reserved</p>
+	
+	</footer>
 	
 <!--aahhh!!!-->
 	<script src="js/jquery.min.js"></script>
