--- a/contactenos.html
+++ b/contactenos.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>About Us</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>CGC-contactenos</title>
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/3be50036e8.js" crossorigin="anonymous"></script>
