--- a/Fuentes de Poder.html
+++ b/Fuentes de Poder.html
@@ -46,7 +46,7 @@
 			  <a class="nav-link" href="Tienda.html">Tienda</a>
 			</li>
 			 <li class="nav-item">
-			  <a class="nav-link" href="SignIn.html"><img src="img/carrito.png" alt="carrito" class="img-fluid" width="40"></a>
+			   <a class="nav-link" href="Carrito.html"><img src="img/carrito.png" alt="carrito" class="img-fluid" width="40"></a>
 			</li>
 
 
@@ -72,16 +72,16 @@
 				<hr>
 				<ul>					
 					<li>
-						<a href="#"><p>Mouse</p></a>
+						<a href="Mouse.html"><p>Mouse</p></a>
 					</li>
 					<li>
-						<a href="#"><p>Teclados</p></a>
+						<a href="Teclados.html"><p>Teclados</p></a>
 					</li>
 					<li>
-						<a href="#"><p>Pantallas</p></a>
+						<a href="Monitores.html"><p>Pantallas</p></a>
 					</li>
 					<li>
-						<a href="#"><p>Tarjetas Gráficas</p></a>
+						<a href="Tarjetas.html"><p>Tarjetas Gráficas</p></a>
 					</li>
 					<li>
 						<a href="RAM.html"><p>RAM</p></a>
@@ -300,17 +300,17 @@
 
 	
 <footer>
-     <div class="row">
-
-        <div class="col-md-6 footer-logo">
-                <a href="#"><img src="img/Builders1.png" width="45" alt="CGC"></a>
-         </div>
-
-         <div class="col-md-6 footer-credits">
-                <p>©2022 CGC All Rights Reserved</p> 
-         </div>
-     </div>
-</footer>
+	 <div class="logo footer">
+           <div class="logo">
+			   
+            <a href="#"><img src="img/Builders1.png" width="50" alt="CGC"></a>
+			   
+           </div>
+	
+      </div>
+	<p>©2022 CGC All Rights Reserved</p>
+	
+	</footer>
 	
 <!--aahhh!!!-->
 	<script src="js/jquery.min.js"></script>
