--- a/SignIn.html
+++ b/SignIn.html
@@ -33,8 +33,11 @@
 			  <li class="nav-item">
 			  <a class="nav-link" href="SignIn.html">Cuenta</a>
 			</li>
+			<li class="nav-item">
+			  <a class="nav-link" href="Tienda.html">Tienda</a>
+			</li>
 			 <li class="nav-item">
-			  <a class="nav-link" href="SignIn.html"><img src="img/carrito.png" alt="carrito" class="img-fluid" width="40"></a>
+			   <a class="nav-link" href="Carrito.html"><img src="img/carrito.png" alt="carrito" class="img-fluid" width="40"></a>
 			</li>
 
 
