--- a/contactenos.html
+++ b/contactenos.html
@@ -12,36 +12,40 @@
 <body>
 	<header>
 		
-	<nav class="navbar navbar-costume navbar-expand-lg">
+<nav class="navbar navbar-costume navbar-expand-lg">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html"><img class="img-fluid" alt="CGC" src="img/Builders1.png" width="135"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="aboutus.html">Sobre Nosotros</a>
-        </li>
-		 <li class="nav-item">
-          <a class="nav-link" href="contactenos.html">Contáctenos</a>
-        </li>
-		    <li class="nav-item">
-          <a class="nav-link" href="SignIn.html">Cuenta</a>
-        </li>
-		  <li class="nav-item">
-			  <a class="nav-link" href="SignIn.html"><img src="img/carrito.png" alt="carrito" class="img-fluid" width="40"></a>
+		  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+			<li class="nav-item">
+			  <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
 			</li>
-        
-       
-      </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn  btnsearch" type="submit">Search</button>
-      </form>
+			<li class="nav-item">
+			  <a class="nav-link" href="aboutus.html">Sobre Nosotros</a>
+			</li>
+			  <li class="nav-item">
+			  <a class="nav-link" href="contactenos.html">Contáctenos</a>
+			</li>
+
+			  <li class="nav-item">
+			  <a class="nav-link" href="SignIn.html">Cuenta</a>
+			</li>
+			<li class="nav-item">
+			  <a class="nav-link" href="Tienda.html">Tienda</a>
+			</li>
+			 <li class="nav-item">
+			   <a class="nav-link" href="Carrito.html"><img src="img/carrito.png" alt="carrito" class="img-fluid" width="40"></a>
+			</li>
+
+
+		  </ul>
+		  <form class="d-flex">
+			<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+			<button class="btn  btnsearch" type="submit">Search</button>
+		  </form>
     </div>
   </div>
 </nav>
